--- a/pygCode/pinyougou-parent/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pygCode/pinyougou-parent/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -34,7 +34,7 @@
     
 </head>
 
-<body class="hold-transition skin-red sidebar-mini"   ng-app="pinyougou" ng-controller="goodsController">
+<body class="hold-transition skin-red sidebar-mini"   ng-app="pinyougou" ng-controller="goodsController" ng-init="selectItemCat1List()">
 
             <!-- 正文区域 -->
             <section class="content">
@@ -73,7 +73,7 @@
 		                           	  	<table>
 		                           	  		<tr>
 		                           	  			<td>
-		                           	  				<select class="form-control" >														
+		                           	  				<select class="form-control"  ng-model="entity.goods.category1Id" ng-options="item.id as item.name for item in itemCat1List" >														
 		                           	  				</select>
 		                              			</td>
 		                              			<td>
