--- a/pygCode/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/goods.html
+++ b/pygCode/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/goods.html
@@ -45,9 +45,9 @@
                             <div class="pull-left">
                                 <div class="form-group form-inline">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-default" title="删除" ><i class="fa fa-trash-o"></i> 删除</button>
-                                        <button type="button" class="btn btn-default" title="审核通过" ><i class="fa fa-check"></i> 审核通过</button>
-                                        <button type="button" class="btn btn-default" title="驳回" ><i class="fa fa-ban"></i> 驳回</button>                                  
+                                        <button type="button" class="btn btn-default" title="删除"  ng-click="dele()"><i class="fa fa-trash-o"></i> 删除</button>
+                                        <button type="button" class="btn btn-default" title="审核通过"  ng-click="updateStatus('1')"><i class="fa fa-check" ></i> 审核通过</button>
+                                        <button type="button" class="btn btn-default" title="驳回"  ng-click="updateStatus('2')"><i class="fa fa-ban" ></i> 驳回</button>                                  
                                         <button type="button" class="btn btn-default" title="刷新" ><i class="fa fa-refresh"></i> 刷新</button>
                                     </div>
                                 </div>
@@ -65,7 +65,7 @@
 			                      <thead>
 			                          <tr>
 			                              <th class="" style="padding-right:0px">
-			                                  <input id="selall" type="checkbox" class="icheckbox_square-blue">
+			                                  <input id="selall" type="checkbox"     class="icheckbox_square-blue">
 			                              </th> 
 										  <th class="sorting_asc">商品ID</th>
 									      <th class="sorting">商品名称</th>
@@ -79,7 +79,7 @@
 			                      </thead>
 			                      <tbody>
                                    <tr ng-repeat="entity in list">
-									    <td><input  type="checkbox"></td>			                              
+									    <td><input  type="checkbox"  ng-click="updateSelection($event,entity.id)"></td>			                              
 									   	<td>{{entity.id}}</td>
 									    <td>{{entity.goodsName}}</td>
 									    <td>{{entity.price}}</td>
