--- a/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
+++ b/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
@@ -169,10 +169,13 @@
 			</div>
 			<!--selector-->
 			<div class="clearfix selector">
-				<div class="type-wrap">
+				<div class="type-wrap" ng-if="resultMap.categoryList!=null">
 					<div class="fl key">商品分类</div>
 					<div class="fl value">
-						<a href="#">手机</a>  <a href="#">电视</a>
+					<span ng-repeat="category in resultMap.categoryList">
+								<a href="#">{{category}}</a>
+					</span>
+
 					</div>
 					<div class="fl ext"></div>
 				</div>
@@ -791,7 +794,6 @@
 				}, function() {
 					$("#shopcarlist").hide();
 				});
-
 			})
 		</script>
 		<script type="text/javascript" src="js/model/cartModel.js"></script>
