--- a/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
+++ b/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
@@ -154,6 +154,7 @@
 				<li class="tag" ng-if="searchMap.category!=''" ng-click="removeSearchItem('category')">商品分类：{{searchMap.category}}<i class="sui-icon icon-tb-close"></i></li>
 				<li class="tag" ng-if="searchMap.brand!=''" ng-click="removeSearchItem('brand')">品牌：{{searchMap.brand}}<i class="sui-icon icon-tb-close"></i></li>
 				<li class="tag" ng-repeat="(key,value) in searchMap.spec" ng-click="removeSearchItem(key)">{{key}}:{{value}}<i class="sui-icon icon-tb-close"></i></li>
+				<li class="tag" ng-if="searchMap.price!=''" ng-click="removeSearchItem('price')">价格：{{searchMap.price}}<i  class="sui-icon icon-tb-close"></i></li>
 			</ul>
 
 				<form class="fl sui-form form-dark">
@@ -244,26 +245,27 @@
 				<div class="type-wrap">
 					<div class="fl key">价格</div>
 					<div class="fl value">
-						<ul class="type-list">
-							<li>
-								<a>0-500元</a>
-							</li>
-							<li>
-								<a>500-1000元</a>
-							</li>
-							<li>
-								<a>1000-1500元</a>
-							</li>
-							<li>
-								<a>1500-2000元</a>
-							</li>
-							<li>
-								<a>2000-3000元 </a>
-							</li>
-							<li>
-								<a>3000元以上</a>
-							</li>
-						</ul>
+					<ul class="type-list" ng-if="searchMap.price==''">
+						<li>
+							<a ng-click="addSearchItem('price','0-500')">0-500元</a>
+						</li>
+						<li>
+							<a ng-click="addSearchItem('price','500-1000')">500-1000元</a>
+						</li>
+						<li>
+							<a ng-click="addSearchItem('price','1000-1500')">1000-1500元</a>
+						</li>
+						<li>
+							<a ng-click="addSearchItem('price','1500-2000')">1500-2000元</a>
+						</li>
+						<li>
+							<a ng-click="addSearchItem('price','2000-3000')">2000-3000元 </a>
+						</li>
+						<li>
+							<a ng-click="addSearchItem('price','3000-*')">3000元以上</a>
+						</li>
+					</ul>
+
 					</div>
 					<div class="fl ext">
 					</div>
