--- a/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
+++ b/pygCode/pinyougou-parent/pinyougou-search-web/src/main/webapp/search.html
@@ -20,7 +20,7 @@
 		
 	</head>
 
-	<body ng-app="pinyougou" ng-controller="searchController">
+	<body ng-app="pinyougou" ng-controller="searchController" ng-init="loadkeywords()">
 		<!-- 头部栏位 -->
 		<!--页面顶部-->
 		<div id="nav-bottom">
@@ -178,7 +178,7 @@
 					</div>
 					<div class="fl ext"></div>
 				</div>
-				<div class="type-wrap logo"  ng-if="resultMap.brandList!=null && searchMap.brand==''"  >
+				<div class="type-wrap logo"  ng-if="resultMap.brandList!=null && searchMap.brand=='' && keywordsIsBrand()==false "  >
 					<div class="fl key brand">品牌</div>
 					<div class="value logos">
                      <ul class="logo-list">
